--- a/templates/web/product.html
+++ b/templates/web/product.html
@@ -68,37 +68,46 @@
 
         </div>
         {% endcomment %}
-<!-- =============================================================== -->
+        <!-- =============================================================== -->
 
-<div class="container container-xxl">
-    <div class="row mb-7 overflow-hidden">
+        <div class="container container-xxl">
+            <div class="row mb-7 overflow-hidden">
 
-        {% for products in product %}
-        <div class="col-sm-6 col-lg-3 mb-6" data-animate="fadeInUp">
-            <div class="card border-0 hover-change-content product">
-                <div style="background-image: url('{{products.image.crop.800x800}}')"
-                    class="card-img ratio bg-img-cover-center ratio-1-1">
-                </div>
-               
+                {% for products in product %}
+                
+                    <div class="col-6 col-sm-6 col-md-3 col-lg-2 mb-6"  data-animate="fadeInUp">
+                        <div class="product-bg">
+
+                            <div class="card border-0 hover-change-content product product-bg-sec">
+                                <!-- <div style="background-image: url('{{products.image.url}}')"
+                                    class="card-img ratio bg-img-cover-center ratio-1-1">
+                                </div> -->
+                                <img src="{{products.image.url}}" alt="" class="card-img ratio bg-img-cover-center" style="aspect-ratio: 1/1;">
+
+                            </div>
+                        
+
+                        <div class="pdetail">
+                            <div>
+                                <p class="product-head">{{products.title}}</p>
+                            </div>
+                            <div></div>
+                            <label>{{products.category}}</label>
+                            <div>
+                                <label> &#8377; {{products.price}}</label>
+                            </div>
+
+
+                        </div>
+                    </div>
+                        
+                    </div>
+                
+                {% endfor %}
+
             </div>
-            <div>
-                <div>
-                    <h3>{{products.title}}</h3>
-                </div>
-                <div></div>
-                <label>{{products.category}}</label>
-                <div>
-                    <label>	&#8377;  {{products.price}}</label>
-                </div>
-               
-               
-            </div>
+
         </div>
-        {% endfor %}
-
-    </div>
-
-</div>
 
 
 
