--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -7,7 +7,7 @@
         <div class="slick-slider slick-dots-light dots-inner-center"
             data-slick-options='{"slidesToShow": 1,"infinite":true,"autoplay":false,"dots":true,"arrows":false}'>
             <div class="box">
-                <div class="d-flex flex-column justify-content-center bg-img-cover-center custom-vh-02 custom-height-sm"
+                <div class="d-flex flex-column justify-content-center bg-img-cover-center custom-vh-02 custom-height-sm mob-img"
                     style="background-image: url('{% static 'web/images/matanah3.jpg' %}')">
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <div class="container container-xxl">
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="box">
-                <div class="d-flex flex-column justify-content-center bg-img-cover-center custom-vh-02 custom-height-sm"
+                <div class="d-flex flex-column justify-content-center bg-img-cover-center custom-vh-02 custom-height-sm mob-img"
                     style="background-image: url('{% static 'web/images/matanah4.jpg' %}')">
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <div class="container container-xxl">
@@ -39,7 +39,7 @@
                 </div>
             </div>
             <div class="box">
-                <div class="d-flex flex-column justify-content-center bg-img-cover-center custom-vh-02 custom-height-sm"
+                <div class="d-flex flex-column justify-content-center bg-img-cover-center custom-vh-02 custom-height-sm mob-img"
                     style="background-image: url('{% static 'web/images/matanah5.jpg' %}')">
                     <div class="d-flex flex-column justify-content-center align-items-center">
                         <div class="container container-xxl">
@@ -56,90 +56,88 @@
             </div>
         </div>
     </section>
-    {% comment %}
-    <section class="pt-6 pb-lg-15 pb-11">
-        <div class="container-fluid">
-            <div class="slick-slider"
-                data-slick-options='{"slidesToShow": 4, "autoplay":true,"dots":true,"arrows":false,"responsive":[{"breakpoint": 1200,"settings": {"slidesToShow":4}},{"breakpoint": 992,"settings": {"slidesToShow":3}},{"breakpoint": 768,"settings": {"slidesToShow": 2}},{"breakpoint": 576,"settings": {"slidesToShow": 1}}]}'>
-                <div class="box" data-animate="fadeInUp">
-                    <div class="card border-0">
-                        <img data-cfsrc="{% static 'web/images/c_07.jpg' %}" alt="Chairs" class="card-img"
-                            style="display:none;visibility:hidden;"><noscript><img
-                                src="{% static 'web/images/c_07.jpg' %}" alt="Chairs" class="card-img"></noscript>
-                        <div class="card-img-overlay d-inline-flex flex-column px-6 pt-4 pb-6">
-                            <h3 class="card-title fs-30">Chairs</h3>
-                            <div class="mt-auto">
-                                <a href="shop-page-02.html"
-                                    class="text-uppercase fs-14 letter-spacing-05 border-bottom border-light-dark border-hover-primary font-weight-bold">Shop
-                                    Now</a>
-                            </div>
-                        </div>
+    <div class="col-xl-3 d-lg-none">
+        <div class="dropdown no-caret mob-category-sec">
+            <a href="#"
+                class="mob-cat btn dropdown-toggle dropdown btn-primary d-flex w-100 text-left align-items-center px-0 px-xl-4 border-0 shadow-none "
+                id="dropdownMenuButton1" data-toggle="dropdown" aria-haspopup="true"
+                aria-expanded="false">
+                <div class="toggle-bar"><span class="toggle-icon text-white"></span></div>
+                <div class="pl-5">Browse Categories</div>
+            </a>
+            <div class="dropdown-menu w-100 py-0" aria-labelledby="dropdownMenuButton1">
+
+                {% for categories in category %}
+                <a class="dropdown-item media align-items-center border-bottom py-2"
+                    href="/product/{{categories.slug}}">
+                    <!-- <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/chair.png' %}" alt="Chair"
+                            style="display:none;visibility:hidden;">
+                        <img src="{% static 'web/images/chair.png' %}" alt="Chair">
+                    </div> -->
+                    <div class="media-body ">{{categories.title}}</div>
+                </a>
+                {% endfor %}
+
+                {% comment %}
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/desk.png' %}" alt="Table"
+                            style="display:none;visibility:hidden;"><img
+                            src="{% static 'web/images/desk.png' %}" alt="Table">
                     </div>
-                </div>
-                <div class="box" data-animate="fadeInUp">
-                    <div class="card border-0">
-                        <img data-cfsrc="{% static 'web/images/c_08.jpg' %}" alt="Accessories" class="card-img"
-                            style="display:none;visibility:hidden;"><noscript><img
-                                src="{% static 'web/images/c_08.jpg' %}" alt="Accessories" class="card-img"></noscript>
-                        <div class="card-img-overlay d-inline-flex flex-column px-6 pt-4 pb-6">
-                            <h3 class="card-title fs-30">Accessories</h3>
-                            <div class="mt-auto">
-                                <a href="shop-page-02.html"
-                                    class="text-uppercase fs-14 letter-spacing-05 border-bottom border-light-dark border-hover-primary font-weight-bold">Shop
-                                    Now</a>
-                            </div>
-                        </div>
+                    <div class="media-body">Table
                     </div>
-                </div>
-                <div class="box" data-animate="fadeInUp">
-                    <div class="card border-0">
-                        <img data-cfsrc="{% static 'web/images/c_09.jpg' %}" alt="Tables" class="card-img"
-                            style="display:none;visibility:hidden;"><noscript><img
-                                src="{% static 'web/images/c_09.jpg' %}" alt="Tables" class="card-img"></noscript>
-                        <div class="card-img-overlay d-inline-flex flex-column px-6 pt-4 pb-6">
-                            <h3 class="card-title fs-30">Tables</h3>
-                            <div class="mt-auto">
-                                <a href="shop-page-02.html"
-                                    class="text-uppercase fs-14 letter-spacing-05 border-bottom border-light-dark border-hover-primary font-weight-bold">Shop
-                                    Now</a>
-                            </div>
-                        </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/fish_bowl.png' %}" alt="Accessories"
+                            style="display:none;visibility:hidden;"><img
+                            src="{% static 'web/images/fish_bowl.png' %}" alt="Accessories">
                     </div>
-                </div>
-                <div class="box" data-animate="fadeInUp">
-                    <div class="card border-0">
-                        <img data-cfsrc="{% static 'web/images/c_10.jpg' %}" alt="Sofa" class="card-img"
-                            style="display:none;visibility:hidden;"><noscript><img
-                                src="{% static 'web/images/c_10.jpg' %}" alt="Sofa" class="card-img"></noscript>
-                        <div class="card-img-overlay d-inline-flex flex-column px-6 pt-4 pb-6">
-                            <h3 class="card-title fs-30">Sofa</h3>
-                            <div class="mt-auto">
-                                <a href="shop-page-02.html"
-                                    class="text-uppercase fs-14 letter-spacing-05 border-bottom border-light-dark border-hover-primary font-weight-bold">Shop
-                                    Now</a>
-                            </div>
-                        </div>
+                    <div class="media-body">Accessories
                     </div>
-                </div>
-                <div class="box" data-animate="fadeInUp">
-                    <div class="card border-0">
-                        <img data-cfsrc="{% static 'web/images/c_07.jpg' %}" alt="Chairs" class="card-img"
-                            style="display:none;visibility:hidden;"><noscript><img
-                                src="{% static 'web/images/c_07.jpg' %}" alt="Chairs" class="card-img"></noscript>
-                        <div class="card-img-overlay d-inline-flex flex-column px-6 pt-4 pb-6">
-                            <h3 class="card-title fs-30">Chairs</h3>
-                            <div class="mt-auto">
-                                <a href="shop-page-02.html"
-                                    class="text-uppercase fs-14 letter-spacing-05 border-bottom border-light-dark border-hover-primary font-weight-bold">Shop
-                                    Now</a>
-                            </div>
-                        </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/sofa.png' %}" alt="Sofa"
+                            style="display:none;visibility:hidden;"><img
+                            src="{% static 'web/images/sofa.png' %}" alt="Sofa">
                     </div>
-                </div>
+                    <div class="media-body">Sofa
+                    </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/plant.png' %}" alt="Plants"
+                            style="display:none;visibility:hidden;"><img
+                            src="{% static 'web/images/plant.png' %}" alt="Plants">
+                    </div>
+                    <div class="media-body">Plants
+                    </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/stool.png' %}" alt="Stool"
+                            style="display:none;visibility:hidden;"><img
+                            src="{% static 'web/images/stool.png' %}" alt="Stool">
+                    </div>
+                    <div class="media-body">Stool
+                    </div>
+                </a>
+                <a class="dropdown-item media align-items-center border-bottom py-2" href="#">
+                    <div class="w-28px mr-3">
+                        <img data-cfsrc="{% static 'web/images/ladder.png' %}" alt="Stands"
+                            style="display:none;visibility:hidden;"><img
+                            src="{% static 'web/images/ladder.png' %}" alt="Stands">
+                    </div>
+                    <div class="media-body">Stands
+                    </div>
+                </a>
+                {% endcomment %}
             </div>
         </div>
-    </section>
-    {% endcomment %}
+    </div>
     <section class="pb-11 pb-lg-15 pt-4">
         <div class="container">
             <h2 class="mb-8 text-center fs-30 fs-md-40">Featured Items</h2>
@@ -154,7 +152,10 @@
                             <!-- <div style="background-image: url('{{products.image.url}}')"
                                 class="card-img ratio bg-img-cover-center ratio-1-1">
                             </div> -->
-                            <img src="{{products.image.url}}" alt="" class="card-img ratio bg-img-cover-center" style="aspect-ratio: 1/1;">
+                            <a href="{{products.image.url}}">
+
+                                <img src="{{products.image.url}}" alt="" class="card-img ratio bg-img-cover-center" style="aspect-ratio: 1/1;">
+                            </a>
 
                         </div>
                     
@@ -165,9 +166,7 @@
                         </div>
                         <div></div>
                         <label>{{products.category}}</label>
-                        <div>
-                            <label> &#8377; {{products.price}}</label>
-                        </div>
+                        
 
 
                     </div>
@@ -352,9 +351,7 @@
                         </div>
                         <div></div>
                         <label>{{product.category}}</label>
-                        <div>
-                            <label> &#8377; {{product.price}}</label>
-                        </div>
+                      
 
 
                     </div>
