--- a/templates/web/gallery.html
+++ b/templates/web/gallery.html
@@ -29,7 +29,7 @@
             <div class="row">
 
                 {% for images in gallery %}
-                <div class="col-sm-6 col-lg-4 mb-8" data-animate="fadeInUp">
+                <div class="col-sm-6 col-lg-3 col-md-4 col-6 mb-8" data-animate="fadeInUp">
                     <div class="card border-0">
                         <a href="#" class="hover-shine card-img-top">
                             <img data-cfsrc="{{images.image.crop.370x240}}" alt="Under the sun in Cape Town"
