--- a/templates/web/partials/header.html
+++ b/templates/web/partials/header.html
@@ -281,7 +281,7 @@
                                     class="nav-item dropdown py-2 py-xl-5 px-0 px-xl-4">
                                     <a class=" {% if is_product %} nav-link  {% endif %}  p-0"
                                         href="/product/all/">
-                                        Product
+                                        Products
                                         <span class="caret"></span>
                                     </a>
                                     <!-- <ul class="dropdown-menu pt-3 pb-0 pb-xl-3 x-animated x-fadeInUp">
@@ -492,7 +492,7 @@
                                     class="nav-item dropdown py-2 py-xl-5 px-0 px-xl-4">
                                     <a class=" {% if is_product %} nav-link  {% endif %}  p-0"
                                         href="/product/all/">
-                                        Product
+                                        Products 
                                         <span class="caret"></span>
                                     </a>
                                    
