--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -78,7 +78,7 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="{% static 'web/images/matanah3.jpg' %}" alt="First slide">
+        <img class="d-block w-100" src="{% static 'web/images/banner1.jpg' %}" alt="First slide">
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="container container-xxl banner-head ">
                 <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="{% static 'web/images/matanah4.jpg' %}" alt="Second slide">
+        <img class="d-block w-100" src="{% static 'web/images/banner02.jpg' %}" alt="Second slide">
         <div class="d-flex flex-column justify-content-center align-items-center">
             <div class="container container-xxl banner-head">
                 <p class="text-black font-weight-bold fs-20 mb-3 text-center" data-animate="fadeInUp">
@@ -235,7 +235,7 @@
             <h2 class="mb-8 text-center fs-30 fs-md-40">Featured Items</h2>
             <div class="row">
 
-                {% for products in product %}
+                {% for products in products_featured %}
 
                 <div class="col-6 col-sm-6 col-md-3 col-lg-2 mb-6" data-animate="fadeInUp">
                     <div class="product-bg">
@@ -434,8 +434,11 @@
                             <!-- <div style="background-image: url('{{products.image.url}}')"
                                 class="card-img ratio bg-img-cover-center ratio-1-1">
                             </div> -->
-                            <img src="{{product.image.url}}" alt="" class="card-img ratio bg-img-cover-center"
-                                style="aspect-ratio: 1/1;">
+                            <a href="{{product.image.url}}">
+
+                                <img src="{{product.image.url}}" alt="" class="card-img ratio bg-img-cover-center"
+                                    style="aspect-ratio: 1/1;">
+                            </a>
 
                         </div>
 
