--- a/templates/web/product.html
+++ b/templates/web/product.html
@@ -82,7 +82,11 @@
                                 <!-- <div style="background-image: url('{{products.image.url}}')"
                                     class="card-img ratio bg-img-cover-center ratio-1-1">
                                 </div> -->
-                                <img src="{{products.image.url}}" alt="" class="card-img ratio bg-img-cover-center" style="aspect-ratio: 1/1;">
+                                <a href="{{products.image.url}}">
+
+                                    <img src="{{products.image.url}}" alt="" class="card-img ratio bg-img-cover-center"
+                                        style="aspect-ratio: 1/1;">
+                                </a>
 
                             </div>
                         
