--- a/templates/web/partials/footer.html
+++ b/templates/web/partials/footer.html
@@ -40,5 +40,11 @@
     </div>
     </div>
     </div>
+
+
+
+    <a href="https://wa.me/+9660532647031" class="whats-link"> <i class="fab fa-whatsapp whatsapp-icon icon-size-wa"></i></a>
+  <a href="tel:+966126301330" class="whats-link-2"> <i class="far fa-phone-alt phone-icon icon-size-ph"></i> </a>
+
     </footer>
     
