--- a/static/web/css/themes.css
+++ b/static/web/css/themes.css
@@ -25587,8 +25587,8 @@ button:focus {
     margin-bottom: -6px;
 }
 .product-bg{
-    border: 1px solid #C9C0BB;
-    background-color: #C9C0BB;
+    border: 1px solid #EDEDEC;
+    background-color: #EDEDEC;
     margin: 0px 0px;
     border-radius: 10px;
 }
@@ -25605,10 +25605,14 @@ button:focus {
     padding-top: 18px;
 }
 .icon-size{
-    font-size: 20px;
+    font-size: 22px;
 }
-
-
+.bgimg-size1{
+    background-size: contain;
+}
+.text-red{
+    color: #c02531;
+}
 
 @media only screen and (min-width:320px) and (max-width:567px){
     .product-bg{
@@ -25703,6 +25707,15 @@ button:focus {
     .banner-head{
         margin-top: -122px;
     }
+    .res-img{
+        height: 215px;
+    }
+    .icon-size-wa{
+        font-size: 25px !important;
+    }
+    .icon-size-ph{
+        font-size: 22px !important;
+    }
 
 }
 
@@ -25711,6 +25724,9 @@ button:focus {
 @media only screen and (min-width:425px) and (max-width:567px){
     .mob-category-sec{
         margin: 10px 96px;
+    }
+    .res-img{
+        height: 215px;
     }
 }
 
@@ -25780,4 +25796,40 @@ button:focus {
         margin-top: -285px;
     }
 
+}
+
+
+
+
+
+
+
+.whats-link {
+    position: fixed !important;
+    /* background-color:#c02531; */
+    display: inline-block;
+    bottom: 18%;
+    right: 0;
+    color: rgb(243, 243, 243) !important;
+    border-radius: 20px 0px 0 20px;
+    padding: 5px;
+    font-size: 11px !important;
+
+}
+.whats-link-2 {
+    position: fixed !important;
+    /* background-color: #2c709d; */
+    display: inline-block;
+    bottom: 11%;
+    right: 0;
+    color: rgb(250, 250, 250) !important;
+    border-radius: 20px 0px 0 20px;
+    padding: 5px 5px;
+    font-size: 11px !important;
+}
+.icon-size-wa{
+    font-size: 32px;
+}
+.icon-size-ph{
+    font-size: 28px;
 }
